scroll zoom implimented

--- a/.gitignore
+++ b/.gitignore
@@ -857,3 +857,16 @@ build/CMakeFiles/opengl.dir/src/IndexBuffer.cpp.o
 build/CMakeFiles/opengl.dir/src/Renderer.cpp.o
 build/CMakeFiles/opengl.dir/src/VertexArray.cpp.o
 build/CMakeFiles/opengl.dir/src/VertexBuffer.cpp.o
+build/.cmake/api/v1/reply/cache-v2-522850275a14dc36afdb.json
+build/.cmake/api/v1/reply/codemodel-v2-2c64c700bbea6e6d0d01.json
+build/.cmake/api/v1/reply/index-2021-12-05T14-44-54-0695.json
+build/.cmake/api/v1/reply/target-opengl-Debug-11458ddbc7cd2b36fd1d.json
+build/CMakeFiles/opengl.dir/src/Camera.cpp.o
+build/.cmake/api/v1/reply/codemodel-v2-65a248dab2ec24647b6b.json
+build/.cmake/api/v1/reply/index-2021-12-05T19-16-34-0509.json
+build/.cmake/api/v1/reply/target-opengl-Debug-81d889db02c03d4437fb.json
+build/CMakeFiles/opengl.dir/src/Texture.cpp.o
+build/CMakeFiles/opengl.dir/src/vendor/stb_image/stb_image.cpp.o
+build/res/Textures/IMG_20211205_191419.jpg
+build/res/Textures/IMG_20211205_191733.jpg
+build/res/Textures/IMG_20211205_191816.jpg
